@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: gmt_io.c,v 1.147 2008-02-19 23:42:24 guru Exp $
+ *	$Id: gmt_io.c,v 1.148 2008-02-25 21:36:48 guru Exp $
  *
  *	Copyright (c) 1991-2008 by P. Wessel and W. H. F. Smith
  *	See COPYING file for copying and redistribution conditions.
@@ -114,6 +114,7 @@ int GMT_bin_double_output_swab (FILE *fp, int n, double *ptr);	/* Write binary d
 int GMT_bin_float_output (FILE *fp, int n, double *ptr);	/* Write binary float output records */
 int GMT_bin_float_output_swab (FILE *fp, int n, double *ptr);	/* Write binary float output records */
 int GMT_ascii_output_one (FILE *fp, double x, int col);		/* Writes one item to output in ascii format */
+BOOLEAN is_a_blank_line (char *line);
 void GMT_adjust_periodic ();					/* Add/sub 360 as appropriate */
 void GMT_decode_calclock_formats ();
 int GMT_get_ymdj_order (char *text, struct GMT_DATE_IO *S, int mode);
@@ -476,7 +477,7 @@ int GMT_ascii_input (FILE *fp, int *n, double **ptr)
 		/* First read until we get a non-blank, non-comment record, or reach EOF */
 
 		GMT_io.rec_no++;
-		while ((p = fgets (line, BUFSIZ, fp)) && (line[0] == '\n' || line[0] == '\r' || (line[0] == '#' && GMT_io.EOF_flag[GMT_IN] != '#'))) GMT_io.rec_no++;
+		while ((p = fgets (line, BUFSIZ, fp)) && is_a_blank_line(line)) GMT_io.rec_no++;	/* Skip comments and blank lines */
 
 		if (!p) {
 			GMT_io.status = GMT_IO_EOF;
@@ -547,6 +548,15 @@ int GMT_ascii_input (FILE *fp, int *n, double **ptr)
 	if (GMT_io.in_col_type[GMT_X] & GMT_IS_GEO) GMT_adjust_periodic ();	/* Must account for periodicity in 360 */
 
 	return (col_no);
+}
+
+BOOLEAN is_a_blank_line (char *line) {
+	/* Returns TRUE if we should skip this line (because it is blank or has comments */
+	int i = 0;
+	if (line[i] == '#' && GMT_io.EOF_flag[GMT_IN] != '#') return (TRUE);	/* Comment */
+	while (line[i] && (line[i] == ' ' || line[i] == 't')) i++;	/* Wind past leading whitespace */
+	if (line[i] == '\n' || line[i] == '\r') return (TRUE);
+	return (FALSE);
 }
 
 #ifdef DONOTUSE
